# qi3ipc

./: AUTHOR  CMakeLists.txt  README.md  fileList.cmake
cmake/: build_config.cmake  qi3ipc-config.cmake
include/: qi3socket.h
src/: qi3socket.cpp
